stdout
compiling CircularBufferTest.cpp
CircularBufferTest.cpp: In member function 'virtual void TEST_CircularBuffer_is_not_empty_after_put_Test::testBody()':
CircularBufferTest.cpp:95:5: error: 'CircularBuffer_Put' was not declared in this scope; did you mean 'CircularBuffer'?
   95 |     CircularBuffer_Put(buffer, 10046);
      |     ^~~~~~~~~~~~~~~~~~
      |     CircularBuffer
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:520: objs/CircularBufferTest.o] Error 1
